@@ -1,6 +1,7 @@
 rerun = "(There were undefined references|Rerun to get (cross-references|the bars) right)"
 doc   = pgfmanual
 latex = latex
+TEXINPUTS := ../../text-en:$(TEXINPUTS)
 
 all: $(doc).pdf
 
@@ -11,9 +12,9 @@ pgfmanual.ind: pgfmanual.idx
 	makeindex $(doc).idx
 
 pgfmanual.pdf: $(doc).tex $(doc).ind 
-	($(latex) $(doc).tex) || true
-	(egrep -q $(rerun) $(doc).log && $(latex) $(doc).tex) || true
-	dvipdfm $(doc)
+	(TEXINPUTS="$(TEXINPUTS)" $(latex) $(doc).tex) || true
+	(egrep -q $(rerun) $(doc).log && TEXINPUTS="$(TEXINPUTS)" $(latex) $(doc).tex) || true
+	dvipdfm -p a4 $(doc)
 
 clean:
-	rm -f *.aux *.log *.bbl *.blg *.ps *.dvi *.pdf *.toc *.out *.snm
+	rm -f pgfmanual*.aux pgfmanual.{out,log,idx,ind,ilg,pdf,toc,bbl,blg,ps,dvi}
