@@ -1,4 +1,5 @@
 doc   = pgfmanual
+TEXINPUTS := ../../text-en:$(TEXINPUTS)
 
 all: $(doc).html
 
@@ -9,7 +10,8 @@ pgfmanual.ind: pgfmanual.idx
 	makeindex $(doc).idx
 
 pgfmanual.html: $(doc).tex $(doc).ind 
-	htlatex $(doc).tex
+	TEXINPUTS="$(TEXINPUTS)" htlatex $(doc).tex
 
 clean:
-	rm -f *.aux *.log *.bbl *.blg *.ps *.dvi *.pdf *.toc *.out *.snm *.html *.svg
+	rm -f pgfmanual*.aux pgfmanual{.out,.log,.idx,.ind,.ilg,.pdf,.toc,.bbl,.blg,.ps,*.gif,*.html,*.svg,.xref,.css,.4ct,.4tc,.dvi,.lg,.idv} *.png
+
