@@ -7,7 +7,7 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesFileRCS $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/systemlayer/pgfsys-tex4ht.def,v 1.15 2007/06/07 07:41:11 tantau Exp $
+\ProvidesFileRCS $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/systemlayer/pgfsys-tex4ht.def,v 1.16 2008/02/07 19:25:41 tantau Exp $
 
 
 \RequirePackage{xcolor}
@@ -23,7 +23,8 @@
 %
 % tex4ht-specific stuff:
 %
-\def\pgfsys@invoke#1{\HCode{#1}}
+\def\pgfsys@invoke#1{\pgf@sys@fail{svg code in preamble}}
+\def\pgfsys@body@invoke#1{\HCode{#1}}
 
 \newcount\pgf@sys@svg@picnum
 
@@ -133,8 +134,10 @@
 
 \def\pgfsys@outerinvoke{\ifpgfpicture\expandafter\pgfsys@invoke\else\expandafter\pgfutil@gobble\fi}
 
+\def\pgfsys@shadingoutsidepgfpicture#1{\pgf@sys@fail{svg code in preamble}}
+\def\pgfsys@shadinginsidepgfpicture#1{\pgf@sys@fail{svg code in preamble}}
 
-\def\pgfsys@shadingoutsidepgfpicture#1{%
+\def\pgfsys@body@shadingoutsidepgfpicture#1{%
   \begingroup%
     #1%
     \setbox\pgfpic=\hbox to0pt{%
@@ -151,12 +154,12 @@
     \pgf@picminy=0pt%
     \pgf@picmaxx=\pgf@x%
     \pgf@picmaxy=\pgf@y%
-    \pgf@baseline=0pt%
+    \def\pgf@shift@baseline{0pt}%
     \pgfsys@typesetpicturebox\pgfpic%
   \endgroup%
 }
 
-\def\pgfsys@shadinginsidepgfpicture#1{%
+\def\pgfsys@body@shadinginsidepgfpicture#1{%
   #1%
   \pgf@sys@svg@sh@defs% hmmm....
   \pgf@process{\pgf@sys@svg@pos}
@@ -167,13 +170,14 @@
   \pgfsysprotocol@literal{</g>\Hnewline}%
 }
 
-
-
 % Protect against color.4ht evil meddling with xcolor:
 \let\pgf@xcolor@declaredcolor=\@declaredcolor
 \let\pgf@xcolor@undeclaredcolor=\@undeclaredcolor
 
 \AtBeginDocument{
+  \let\pgfsys@invoke=\pgfsys@body@invoke
+  \let\pgfsys@shadingoutsidepgfpicture=\pgfsys@body@shadingoutsidepgfpicture
+  \let\pgfsys@shadinginsidepgfpicture=\pgfsys@body@shadinginsidepgfpicture
   \let\pgf@texht@declaredcolor=\@declaredcolor
   \let\pgf@texht@undeclaredcolor=\@undeclaredcolor
   \def\@declaredcolor{\ifpgfpicture\expandafter\pgf@xcolor@declaredcolor\else\expandafter\pgf@texht@declaredcolor\fi}
